--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
