Refactor mPurchaseReference in PurchaseListActivity to filter shown Purchases by category selected in Spinner in ChartActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.PurchaseListActivity"></activity>
+        <activity android:name=".ui.PurchaseListActivity" />
+        <activity android:name=".ui.ChartActivity"></activity>
     </application>
 
 </manifest>
