--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    compile 'com.github.bmarrdev:android-DecoView-charting:v1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
