--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
     compile 'com.github.bmarrdev:android-DecoView-charting:v1.2'
+    compile 'com.android.support:recyclerview-v7:+'
 }
 
 apply plugin: 'com.google.gms.google-services'
